correction et meilleur commentaire

--- a/Ohmyfood/pages/delice-dessens.html
+++ b/Ohmyfood/pages/delice-dessens.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
 
-            <!-- Plats principaux -->
+            <!-- Plats -->
             <div class="dish">
                 <div class="dish__title">
                     <h3>Plats</h3>
