correnction et meilleur commentaire

--- a/Ohmyfood/index.html
+++ b/Ohmyfood/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<!-- Loader -->
+<!-- ecrant de chargement de la page -->
 <div class="loader">
     <div class="loader__food">
         <span>o</span>
@@ -39,7 +39,7 @@
 
 
 <main class="main">
-    <!-- Section Maps -->
+    <!-- section carte -->
     <div class="maps">
     <span>
         <i class="fas fa-map-marker-alt"></i>
