--- a/Ohmyfood/pages/la-noteenchantée.html
+++ b/Ohmyfood/pages/la-noteenchantée.html
@@ -32,6 +32,7 @@
             <div class="fill__heart">
                 <span><i class="fill far fa-heart fa-2x"></i></span>
             </div>
+            <!--Entrées-->
         </div>
         <div class="full__menu">
             <div class="starter">
@@ -79,6 +80,7 @@
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
                     </div>
                 </div>
+                <!--plats-->
             </div>
             <div class="dish">
                 <div class="dish__title">
@@ -115,6 +117,7 @@
                         <span><i class="fas fa-check-circle fa-2x"></i></span>
                     </div>
                 </div>
+                <!--deserts-->
             </div>
             <div class="dessert">
                 <div class="dessert__title">
